--- a/stylessobre.css
+++ b/stylessobre.css
@@ -86,6 +86,11 @@ body.dark-mode {
   outline: 3px solid var(--primary-color);
 }
 
+body.dark-mode .accessibility-controls button {
+  border-color: var(--light-color);
+  color: var(--light-color);
+}
+
 .nav-toggle {
   display: none;
   flex-direction: column;
